hub-auth/kustomize/hub-auth/overlays/local/hydra/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-hydra
  labels:
    app: hydra
spec:
  tls:
  - hosts:
      - HYDRA_PUBLIC_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: HYDRA_PUBLIC_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: HYDRA_PUBLIC_SERVICE_NAME
            port:
              name: http
